// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressIndicator component Should render progress indicator - show layer 1`] = `
<View
  showLayer={true}
  size="medium"
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderRadius": 26,
        "display": "flex",
        "height": 52,
        "justifyContent": "center",
        "width": 52,
      },
    ]
  }
>
  <View
    collapsable={false}
    nativeID="animatedComponent"
    size="medium"
    style={
      Object {
        "height": 48,
        "transform": Array [
          Object {
            "rotate": "0deg",
          },
        ],
        "width": 48,
      }
    }
  >
    <View
      collapsable={false}
      nativeID="animatedComponent"
      size="medium"
      style={
        Object {
          "height": 24,
          "overflow": "hidden",
          "width": 48,
        }
      }
    >
      <View
        collapsable={false}
        nativeID="animatedComponent"
        size="medium"
        style={
          Object {
            "borderColor": "#f6be00",
            "borderRadius": 24,
            "borderWidth": 4.8,
            "height": 48,
            "width": 48,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`ProgressIndicator component Should render progress indicator - size large 1`] = `
<View
  showLayer={false}
  size="large"
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderRadius": 34,
        "display": "flex",
        "height": 68,
        "justifyContent": "center",
        "width": 68,
      },
    ]
  }
>
  <View
    size="large"
    style={
      Object {
        "height": 64,
        "transform": Array [
          Object {
            "rotate": "0deg",
          },
        ],
        "width": 64,
      }
    }
  >
    <View
      collapsable={false}
      nativeID="animatedComponent"
      size="large"
      style={
        Object {
          "height": 32,
          "overflow": "hidden",
          "width": 64,
        }
      }
    >
      <View
        collapsable={false}
        nativeID="animatedComponent"
        size="large"
        style={
          Object {
            "borderColor": "#f6be00",
            "borderRadius": 32,
            "borderWidth": 6.4,
            "height": 64,
            "width": 64,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`ProgressIndicator component Should render progress indicator - size semi 1`] = `
<View
  showLayer={false}
  size="semi"
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderRadius": 18,
        "display": "flex",
        "height": 36,
        "justifyContent": "center",
        "width": 36,
      },
    ]
  }
>
  <View
    collapsable={false}
    nativeID="animatedComponent"
    size="semi"
    style={
      Object {
        "height": 32,
        "transform": Array [
          Object {
            "rotate": "0deg",
          },
        ],
        "width": 32,
      }
    }
  >
    <View
      collapsable={false}
      nativeID="animatedComponent"
      size="semi"
      style={
        Object {
          "height": 16,
          "overflow": "hidden",
          "width": 32,
        }
      }
    >
      <View
        collapsable={false}
        nativeID="animatedComponent"
        size="semi"
        style={
          Object {
            "borderColor": "#f6be00",
            "borderRadius": 16,
            "borderWidth": 3.2,
            "height": 32,
            "width": 32,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`ProgressIndicator component Should render progress indicator - size standard 1`] = `
<View
  showLayer={false}
  size="standard"
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderRadius": 14,
        "display": "flex",
        "height": 28,
        "justifyContent": "center",
        "width": 28,
      },
    ]
  }
>
  <View
    size="standard"
    style={
      Object {
        "height": 24,
        "transform": Array [
          Object {
            "rotate": "0deg",
          },
        ],
        "width": 24,
      }
    }
  >
    <View
      collapsable={false}
      nativeID="animatedComponent"
      size="standard"
      style={
        Object {
          "height": 12,
          "overflow": "hidden",
          "width": 24,
        }
      }
    >
      <View
        collapsable={false}
        nativeID="animatedComponent"
        size="standard"
        style={
          Object {
            "borderColor": "#f6be00",
            "borderRadius": 12,
            "borderWidth": 2.4,
            "height": 24,
            "width": 24,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`ProgressIndicator component Should render progress indicator correctly 1`] = `
<View
  showLayer={false}
  size="medium"
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderRadius": 26,
        "display": "flex",
        "height": 52,
        "justifyContent": "center",
        "width": 52,
      },
    ]
  }
>
  <View
    collapsable={false}
    nativeID="animatedComponent"
    size="medium"
    style={
      Object {
        "height": 48,
        "transform": Array [
          Object {
            "rotate": "0deg",
          },
        ],
        "width": 48,
      }
    }
  >
    <View
      collapsable={false}
      nativeID="animatedComponent"
      size="medium"
      style={
        Object {
          "height": 24,
          "overflow": "hidden",
          "width": 48,
        }
      }
    >
      <View
        collapsable={false}
        nativeID="animatedComponent"
        size="medium"
        style={
          Object {
            "borderColor": "#f6be00",
            "borderRadius": 24,
            "borderWidth": 4.8,
            "height": 48,
            "width": 48,
          }
        }
      />
    </View>
  </View>
</View>
`;
